<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <data>
        
        <variable
                name="presenter"
            type="com.example.gena.chessjokenpocom.mvp.presenters.login.SignUpFragmentPresenter" />
    </data>
    
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/windowBackground"
            android:gravity="center_horizontal|center"
            android:orientation="vertical">
        
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:weightSum="1"
                android:padding="20dp">
            
            <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                
                <EditText
                        android:id="@+id/et_first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/first_name"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>
            
            <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_second_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                
                <EditText
                        android:id="@+id/et_second_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/second_name"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>
            
            <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                
                <EditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>
            
            
            <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    app:passwordToggleContentDescription="description"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorAccent">
                
                <EditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>
            
            <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_re_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    app:passwordToggleContentDescription="description"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorAccent">
                
                <EditText
                        android:id="@+id/et_re_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/re_password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>
            
            <Button
                    android:id="@+id/bt_sign_up"
                    android:text="Ok"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:onClick="@{presenter::onClick}" />
        
        </LinearLayout>
    </LinearLayout>
</layout>
